php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #41673 json_encode breaks large numbers in arrays
Submitted: 2007-06-12 20:12 UTC Modified: 2007-06-13 17:57 UTC
From: stas at zend dot com Assigned: iliaa (profile)
Status: Closed Package: JSON related
PHP Version: 5CVS-2007-06-12 (CVS) OS: Unix
Private report: No CVE-ID: None
 [2007-06-12 20:12 UTC] stas at zend dot com
Description:
------------
When array with big numbers is encoded with json_encode, the result contains entirely different number. 

Reproduce code:
---------------
<?php
$b = array(40000000000000);
var_dump(json_encode($b));


Expected result:
----------------
string "[40000000000000]"
or
string "[4.0e13]"

Actual result:
--------------
string(11) "[969572352]"


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-06-13 17:57 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 10 15:00:02 2026 UTC