MFB: Fixed bug #41673 (json_encode breaks large numbers in arrays).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@237550 c90b9560-bf6c-de11-be94-00142212c4b1